--- a/cms.html
+++ b/cms.html
@@ -196,7 +196,15 @@ firebase.auth().onAuthStateChanged(firebaseUser => {
 
 
 </script>
+
+<script type="text/javascript">
 	
+
+	history.pushState(null, null, location.href);
+    window.onpopstate = function () {
+        history.go(1);
+    };
+</script>	
 
 
 
