--- a/PoptosCMS.html
+++ b/PoptosCMS.html
@@ -249,7 +249,7 @@ pre{
   position: absolute;
   top: 48%;
   left: 48%;
-  background-color:#fff;
+  background-color:#F0F0F0;
 
   border-radius: 100%;  
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
