--- a/cms.html
+++ b/cms.html
@@ -63,13 +63,73 @@
   to{ bottom:0; opacity:1 }
 }
     
+.spinner {
+   position: absolute;
+  top: 48%;
+  left: 48%;
+  width: 70px;
+  text-align: center;
+}
 
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #F0F0F0;
 
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+
+.spinner-wrapper {
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color:#000022;
+z-index: 999999;
+}
 
     </style>
 </head>
 
-<body >
+<body onload="myFunction()" >
+
+
+  <div id = "loader" class="spinner-wrapper">
+<div class="spinner">
+  <div class="bounce1"></div>
+  <div class="bounce2"></div>
+  <div class="bounce3"></div>
+</div>
+</div>
 <!-- style="display: flex;
   justify-content: center;
   align-items: center;"> -->
@@ -238,6 +298,18 @@ loading1.style.display = "none";
 
 </script>
 
+  <script>
+      var myVar;
+
+      function myFunction() {
+          myVar = setTimeout(showPage, 1700);
+      }
+
+      function showPage() {
+        document.getElementById("loader").style.display = "none";
+        document.getElementById("myDiv").style.display = "block";
+      }
+  </script>
 
 
 <!-- Material form login -->
