--- a/PoptosCMS.html
+++ b/PoptosCMS.html
@@ -244,34 +244,46 @@ pre{
 }
 
 .spinner {
-  width: 56px;
-  height: 56px;
-  position: absolute;
+   position: absolute;
   top: 48%;
   left: 48%;
-  background-color:#F0F0F0;
-
-  border-radius: 100%;  
-  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
-  animation: sk-scaleout 1.0s infinite ease-in-out;
+  width: 70px;
+  text-align: center;
 }
 
-@-webkit-keyframes sk-scaleout {
-  0% { -webkit-transform: scale(0) }
-  100% {
-    -webkit-transform: scale(1.0);
-    opacity: 0;
-  }
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #F0F0F0;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
 
-@keyframes sk-scaleout {
-  0% { 
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
     -webkit-transform: scale(0);
     transform: scale(0);
-  } 100% {
+  } 40% { 
     -webkit-transform: scale(1.0);
     transform: scale(1.0);
-    opacity: 0;
   }
 }
 
@@ -289,9 +301,11 @@ z-index: 999999;
 </head>
 <body onload="myFunction()">
 
-<div id = "loader" class="spinner-wrapper">
+  <div id = "loader" class="spinner-wrapper">
 <div class="spinner">
-  
+  <div class="bounce1"></div>
+  <div class="bounce2"></div>
+  <div class="bounce3"></div>
 </div>
 </div>
 
