--- a/csv.html
+++ b/csv.html
@@ -65,6 +65,9 @@ pre{
      h2{
      	font-size: 20px;
      }
+     .view{
+     	height: 100%;
+     }
 }
 /* Include the padding and border in an element's total width and height */
 
@@ -94,7 +97,7 @@ pre{
 </style>
 </head>
 <body>
-   <div class="view full-page-intro parallax " style="background-image: url('pic1.jpg'); background-repeat: no-repeat; background-size: cover;">
+   <div class="view full-page-intro" style="background-image: url('pic1.jpg'); background-repeat: no-repeat; background-size: cover;">
 
 <div class="mask rgba-grey-light animate-bottom" style="overflow-y: scroll;">
 <div >
