--- a/csv.html
+++ b/csv.html
@@ -99,7 +99,7 @@ pre{
 <body>
    <div class="view full-page-intro" style="background-image: url('pic1.jpg'); background-repeat: no-repeat; background-size: cover;">
 
-<div class="mask rgba-grey-light animate-bottom" style="overflow-y: scroll;">
+<div class="mask rgba-grey-light animate-bottom" style="overflow-y: scroll; -webkit-overflow-scrolling: touch; height: 100%;">
 <div >
 <br>
 <br>
