--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
 <!-- preloader -->
   <div class="show"  >Sorry! We are Currently Working on Mobile Support :/  </div>
-  <div class="show1"  >Switch to Desktop Version... <span> <br>OR <br> <a href="example.html">kunal98p.github.io/example.html</a> <br>to Reserve your Seat</div>
+  <div class="show1"  >Switch to Desktop Version... <span> <br>OR <br> <a href="csv.html">kunal98p.github.io/csv.html</a> <br>to Reserve your Seat</div>
 
 
 <div id = "loader" class="spinner-wrapper">
