--- a/csv.html
+++ b/csv.html
@@ -47,7 +47,7 @@ pre{
     border: 1px solid #ccc;
     border-radius: 4px;
     margin-bottom: 5%;
-    overflow-x: scroll;
+    overflow-x: auto;
     -webkit-overflow-scrolling: touch;
 }
 .vl {
