--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ LOGIN</strong>
               <!--Card content-->
               <div class="card-body">
 
-                 <div id="map" style="color: red; font-size: 25px; margin-top: auto;margin-bottom: auto; text-align: center; font-weight: 550;">Please Allow this app Access your Location :\
+                 <div id="map" style="color: red; font-size: 15px; margin-top: auto;margin-bottom: auto; text-align: center; font-weight: 550;">Please Allow this app Access your Location OR You are Offline :\
                </div>
 
 
