--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
         border-radius: 7px; 
          
        }
+   #kk{
+   	display: none;
+   }
 }
 
 @media screen and (max-width: 600px) {
@@ -251,6 +254,11 @@
      
      h1{
       font-size: 40px;
+     }
+     #zz{
+     	display: flex;
+     	justify-content: center;
+     	align-items: center;
      }
 .navbar {
     background-color: #37454d;
