--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ function showPosition(position) {
      
        if((position.coords.latitude>22 && position.coords.latitude<23) && (position.coords.longitude>72 && position.coords.longitude <74)) {
        		document.getElementById("kunal1").innerHTML = "<h6  style='color: green ; background: white; border-radius: 7px; padding-top: 5px; padding-bottom: 5px; text-align: center; width: 70%;margin-left: auto; margin-right: auto; font-weight: 500px; margin-bottom: 15px; '>"+"Available in Your Region :)" +"</h6>";
-          	document.getElementById("kunal").innerHTML = "<a target='_blank' href='csv.html' class='btn btn-indigo btn-lg d-flex justify-content-center zoom btn1' >"+ "EXPLORE"+ "</a>"
+          	document.getElementById("kunal").innerHTML = "<a href='csv.html' class='btn btn-indigo btn-lg d-flex justify-content-center zoom btn1' >"+ "EXPLORE"+ "</a>"
           }
           else{
        		document.getElementById("kunal2").innerHTML = "Sorry! We are Not Available in Your Region :(";
