--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ LOGIN</strong>
                     <button type="button" class="btn btn-success" style="padding: 7px 25px; border-radius: 13px;"onclick="ex()" >Go</button>
                     <div style="text-align:  center; color: white; margin: 3%;">OR</div>
                     <div style="display: flex;justify-content: center;">
-                    	 <button type="button" class="btn btn-success" style="padding: 7px 25px; border-radius: 13px;"onclick="ex()" >Get Location!</button>
+                    	 <button type="button" class="btn btn-success" style="padding: 7px 25px; border-radius: 13px;"onclick="ex1()" >Get Location!</button>
                     	</div>
                 
                 
@@ -575,6 +575,11 @@ function showPosition(position) {
 
 
 
+  }
+
+  function ex1(){
+  	document.getElementById("mobile").style.display = "none";
+  	document.getElementById("website").style.display = "block";
   }
 </script>
 
