--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@
 }
 
 
-
+#grid{
+	padding-top: 60px;
+}
 
 @media screen and (max-width: 600px) {
 #mobile{
@@ -259,11 +261,7 @@
 .navbar {
     background-color: #37454d;
 }
- .btn-indigo {
-    background-color:#37454d!important;
-    color: #fff!important;
-}
-     input{
+    input{
  
  opacity: 0.8;
   height: 40px;
@@ -276,6 +274,10 @@
 #container{
 	display: flex;
 	justify-content: center;
+}
+#grid{
+	padding-top: 0px;
+	margin-top: 35%;
 }
 
 }
@@ -340,7 +342,7 @@ LOGIN</strong>
         <div class="row wow fadeIn">
 
           <!--Grid column-->
-          <div class=" col-xl-6 mb-4 white-text text-center text-md-left" style="padding-top: 60px;">
+          <div class=" col-xl-6 mb-4 white-text text-center text-md-left" id="grid">
 
             <h1 class="font-weight-bold mt-sm-5 display-3" id="xy">WELCOME :)</h1>
 
