--- a/index.html
+++ b/index.html
@@ -388,9 +388,11 @@ LOGIN</strong>
             </div>
 
                 <div id="mobile">
+                	<div>
                   <input placeholder="Enter your Location!" id="x1" style="border-radius: 13px; padding-left: 5%; ">
                 
-                    <button type="button" class="btn btn-success" style="padding: 7px 25px; border-radius: 13px;"onclick="ex()" >Go</button>
+                    <span><button type="button" class="btn btn-success" style="padding: 7px 25px; border-radius: 13px;"onclick="ex()" >Go</button></span>
+                </div>
                     <div style="text-align:  center; color: white; margin: 3%;">OR</div>
                     <div style="display: flex;justify-content: center;">
                     	 <button type="button" class="btn btn-success" style="padding: 7px 25px; border-radius: 13px;"onclick="ex1()" >Get Location!</button>
