--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
  opacity: 0.8;
   height: 40px;
   padding-left: 2%;
+  width: 100%;
 }
 .btn-success {
     background-color:#37454d!important;
@@ -388,7 +389,7 @@ LOGIN</strong>
             </div>
 
                 <div id="mobile">
-                	<div>
+                	<div style="display: flex; justify-content: center;; align-items: center;">
                   <input placeholder="Enter your Location!" id="x1" style="border-radius: 13px; padding-left: 5%; ">
                 
                     <span><button type="button" class="btn btn-success" style="padding: 7px 25px; border-radius: 13px;"onclick="ex()" >Go</button></span>
