--- a/example.html
+++ b/example.html
@@ -48,8 +48,9 @@ input {
   
   border: none;
   
-  width: 30%;
+  width: 50%;
   padding: 10px;
+  margin: 10px;
   float: left;
   font-size: 16px;
   margin-right: 20px;
@@ -61,7 +62,8 @@ input {
 /* Style the "Add" button */
 .addBtn {
   padding: 10px;
-  width: 25%;
+  margin: 10px;
+  width: 15%;
   background: #d9d9d9;
   color: #555;
   float: left;
@@ -105,6 +107,38 @@ input {
    
 
 @media screen and (max-width: 600px) {
+
+  input {
+  
+  border: none;
+  
+  width: 90%;
+  padding: 10px;
+  margin: 10px;
+  float: left;
+  font-size: 16px;
+  margin-right: 20px;
+  border-radius: 7px;
+}
+
+
+
+/* Style the "Add" button */
+.addBtn {
+  padding: 10px;
+  margin: 10px;
+  width: 30%;
+  background: #d9d9d9;
+  color: #555;
+  float: left;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 0;
+  border-radius: 8px;
+}
+
   .view {
     background-image: url('pic1.jpg');
      background-repeat: no-repeat; 
@@ -160,14 +194,14 @@ input {
   <h3 style="margin:5px; font-weight: 200; ">(GUEST ENTRY)</h3>
   <br>
   
-
+  <div style="display: flex;align-items: center; justify-content: center; flex-direction: column;">
   <input type="text" id="myInput" placeholder="Name...">
-  <span ><input type="text" id="Input" placeholder="No of person..."></span>
+  <input type="text" id="Input" placeholder="No of person...">
 
   <span onclick="createData()" class="addBtn">Add</span>
    <span id="test2" style="font-size: 25px; color: green;"></span>
 
-  
+  </div>
 
 
 </div>
