--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         height: 650px;
       }
     }*/
-    @media (min-width: 800px) and (max-width: 850px) {
+    @media (max-width: 900px) {
               .navbar:not(.top-nav-collapse) {
                   background: #1C2331!important;
               }
@@ -193,7 +193,7 @@
 	padding-top: 60px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
 #mobile{
   display: block;
 }
@@ -235,7 +235,7 @@
    }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   
    .card {
         margin-left: 2%;
@@ -279,6 +279,10 @@
 #grid{
 	padding-top: 0px;
 	margin-top: 35%;
+}
+.btn-indigo{
+   background-color:#1C2331!important;
+    color: #fff!important;
 }
 
 }
