--- a/example.html
+++ b/example.html
@@ -57,6 +57,11 @@ input {
   border-radius: 7px;
 }
 
+.view, .view .mask, .waves-effect {
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 
 
 /* Style the "Add" button */
@@ -74,6 +79,7 @@ input {
   border-radius: 0;
   border-radius: 8px;
 }
+
 
 .addBtn:hover {
   background-color: #bbb;
