--- a/cms.html
+++ b/cms.html
@@ -263,7 +263,9 @@ firebase.auth().onAuthStateChanged(firebaseUser => {
   
   
     fb_db.child('loggedIn').set(loggedIn);
-    document.cookie = "username=John Doe";
+    document.cookie = "IsloggedIn=true";
+    var x = document.cookie;
+    console.log(x);
  const user_id = document.getElementById("user_id");
   window.location = 'PoptosCMS.html'; 
 }
