--- a/index.html
+++ b/index.html
@@ -287,6 +287,58 @@
 
 }
 
+@media screen and (max-width: 900px) {
+  
+   .card {
+        margin-left: 2%;
+        margin-right: 2%;
+        height: 180px;
+      }
+     img {
+      height: 10px;
+      width: 10px;
+     }
+     h2{
+      font-size: 20px;
+     }
+     
+     h1{
+      font-size: 40px;
+     }
+     #zz{
+     	display: flex;
+     	justify-content: center;
+     	align-items: center;
+     }
+.navbar {
+    background-color: #37454d;
+}
+    input{
+ 
+ opacity: 0.8;
+  height: 40px;
+  padding-left: 2%;
+  width: 100%;
+}
+.btn-success {
+    background-color:#37454d!important;
+    color: #fff!important;
+}
+#container{
+	display: flex;
+	justify-content: center;
+}
+#grid{
+	padding-top: 0px;
+	margin-top: 35%;
+}
+.btn-indigo{
+   background-color:#1C2331!important;
+    color: #fff!important;
+}
+
+}
+
 
 
   </style>
