--- a/cms.html
+++ b/cms.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>exx</title>
+    <title>Restaurant Login</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -268,6 +268,12 @@ firebase.auth().onAuthStateChanged(firebaseUser => {
   window.location = 'PoptosCMS.html'; 
 }
 });
+
+var delete_cookie = function(name) {
+    document.cookie = name + '=;expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+};
+
+delete_cookie('username');
 
 
 </script>
