--- a/example.html
+++ b/example.html
@@ -222,6 +222,7 @@ input {
 <script type="text/javascript">
 
   var notificationsEnabled = false;
+  console.log("working");
   
   function initNotifications() {
     if (window.Notification) {
