--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
 <i class="fa fa-users" aria-hidden="true" style="padding-right: 5px;" ></i>
 
-LOGIN</strong>
+RESTAURANT LOGIN</strong>
        </a>
        </div>
 
