--- a/csv.html
+++ b/csv.html
@@ -308,6 +308,15 @@ pre{
 
 <script>
 
+ var x = localStorage.getItem("anand");
+  if(x==="true"){
+    console.log("welcome");
+
+  }
+  else{
+    window.location='index.html';
+  }
+  
 var s;
 
   function addZero(i) {
