--- a/example.html
+++ b/example.html
@@ -341,7 +341,7 @@ var n = d.getTime();
   			
 			    if (notificationsEnabled) {
 			      var notification = new Notification("HMS", {
-			        body : 'Your Seat for '+input+' person has been Reserved at '+time,
+			        body : 'Your Seat for '+input+' person has been Successfully Reserved at '+time+' .Have a Nice Time:)'
 			        icon : '/images/icons/fox-icon.png'
 			      });
 			      
