--- a/example.html
+++ b/example.html
@@ -222,7 +222,7 @@ input {
 
 <script>
 
- var x = localStorage.getItem("show");
+ var x = sessionStorage.getItem("show");
   if(x==="true"){
     console.log("welcome");
 
