--- a/csv.html
+++ b/csv.html
@@ -183,7 +183,7 @@ pre{
      <div class="row">
             <div class="col-4" style="display: flex; flex-direction: column; align-items: center;justify-content: center; height: 150px;">
             	<div><h2 >Poptos </h2></div>
-            	<div><a href="example.html " id="xxx" style="display: none;"><h6>*Click To Reserve a Seat in Advance  <img src="http://www.adit.ac.in/img/new.gif" style="height: 1em; width: 2em"></h6></a></div>
+            	<div><a href="reservation.html " id="xxx" style="display: none;"><h6>*Click To Reserve a Seat in Advance  <img src="http://www.adit.ac.in/img/new.gif" style="height: 1em; width: 2em"></h6></a></div>
             </div>
             <div class="col-8">
             	<div><h5 style="text-align: center;">Waiting Time</h5></div>
