--- a/reservation.html
+++ b/reservation.html
@@ -203,7 +203,7 @@ input {
   <input type="text" id="myInput" placeholder="Name...">
   <input type="text" id="Input" placeholder="No of person...">
 
-  <span onclick="createData();" class="addBtn">Add</span>
+  <span onclick="createData()" class="addBtn">Add</span>
    <span id="test2" style="font-size: 25px; color: green;"></span>
 
   </div>
@@ -244,14 +244,14 @@ input {
  
 
 
- var x = sessionStorage.getItem("show");
-  if(x==="true"){
-    console.log("welcome");
+ // var x = sessionStorage.getItem("show");
+ //  if(x==="true"){
+ //    console.log("welcome");
 
-  }
-  else{
-    window.location='csv.html';
-  }
+ //  }
+ //  else{
+ //    window.location='csv.html';
+ //  }
 
 
 
@@ -345,7 +345,7 @@ var n = d.getTime();
   			
 			    if (notificationsEnabled) {
 			      var notification = new Notification("HMS", {
-			        body : 'Your Seat for ' +input+ ' person has been Successfully Reserved at ' +time+ ' .Have a Nice Time:)'
+			        body : 'Your Seat for ' +input+ ' person has been Successfully Reserved at ' +time+ ' .Have a Nice Time:)',
 			        icon : '/images/icons/fox-icon.png'
 			      });
 			      
