--- a/reservation.html
+++ b/reservation.html
@@ -244,14 +244,14 @@ input {
  
 
 
- // var x = sessionStorage.getItem("show");
- //  if(x==="true"){
- //    console.log("welcome");
+ var x = localStorage.getItem("show");
+  if(x==="true"){
+    console.log("welcome");
 
- //  }
- //  else{
- //    window.location='csv.html';
- //  }
+  }
+  else{
+    window.location='csv.html';
+  }
 
 
 
