--- a/cms.html
+++ b/cms.html
@@ -259,7 +259,7 @@ promise.catch(e => alert("Error"));
 
 firebase.auth().onAuthStateChanged(firebaseUser => {
   if(firebaseUser){
-  	sessionStorage.setItem("isLoggedIn", "true");
+  	localStorage.setItem("isLoggedIn", "true");
   var loggedIn= "true";
   
     fb_db.child('loggedIn').set(loggedIn);
