--- a/reservation.html
+++ b/reservation.html
@@ -345,7 +345,7 @@ var n = d.getTime();
   			
 			    if (notificationsEnabled) {
 			      var notification = new Notification("HMS", {
-			        body : 'Your Seat for ' +input+ ' person has been Successfully Reserved at ' +time+ ' .Have a Nice Time:)',
+			        body : 'Hello '+inputValue+'! Your Seat for ' +input+ ' person has been Successfully Reserved at ' +time+ ' .Have a Nice Time:)',
 			        icon : '/images/icons/fox-icon.png'
 			      });
 			      
