--- a/csv.html
+++ b/csv.html
@@ -109,7 +109,7 @@ pre{
 </style>
 </head>
 <body>
-   <div class="view full-page-intro" style=" background-image: url('kunal.jpg'); background-repeat: no-repeat; background-size: cover;">
+   <div class="view full-page-intro">
 
 <div style="overflow-y: auto; -webkit-overflow-scrolling: touch; height: 100%;">
 		<div class="container-fluid" style="background-color: white; height: 64px; display: flex; align-items: center; justify-content: center;">
@@ -184,7 +184,8 @@ pre{
      <div class="row">
             <div class="col-4" style="display: flex; flex-direction: column; align-items: center;justify-content: center; height: 150px;">
             	<div><h2 >Poptos </h2></div>
-            	<div><a href="reservation.html " id="xxx" style="display: none;"><h6>*Click To Reserve a Seat in Advance  <img src="http://www.adit.ac.in/img/new.gif" style="height: 1em; width: 2em"></h6></a></div>
+            	<div><a href="reservation.html " id="xxx" style="display: none;"><h6>*Click To Reserve a Seat in Advance 
+              </h6></a></div>
             </div>
             <div class="col-8">
             	<div><h5 style="text-align: center;">Waiting Time</h5></div>
