--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ RESTAURANT LOGIN</strong>
               <!--Card content-->
               <div class="card-body tt">
 
-                 <div id="map" style="color: red; font-size: 25px; margin-top: auto;margin-bottom: auto; text-align: center; font-weight: 550;">Please Allow this app Access your Location :\
+                 <div id="map" style="color: red; font-size: 20px; margin-top: auto;margin-bottom: auto; text-align: center; font-weight: 550;">Please Allow this app Access your Location Or You are Offline :\
                </div>
                  <br>
 
