--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ RESTAURANT LOGIN</strong>
 
    
     <div class="pt-4">
-     <p class="display-5">This site is made to demonstrate Dynamic Hotel Management System where user can the Guest can see the availaibilty of Rooms , waiting time in Restaurants and order food online </p>
+     <p class="display-5 container" >A PWA(Progressive Web Application ) that shows the Restaurants around with their Real Time Waiting to the Clients, a Waiting list manager and smart schedular for the Admins and uses techologies like AMP(Acclerated Mobile Pages) ,asynchronous background refesh, Service Workers, AJAX , Intelligent Caching, offline support ,manifests, Geolocation API, Push Notifications and many more.  </p>
      
 
       
